Lagt til minimal oppfølgingsinfo
