# src/main/kotlin/no/nav/poao/rest/ArbeidsoppfolgingRoutes.kt
@@ -4,6 +4,7 @@ import io.ktor.application.*
 import io.ktor.response.*
 import io.ktor.routing.*
 import no.nav.poao.plugins.getMockAktiviteter
+import no.nav.poao.plugins.getMockOppfolgingsinfo
 import no.nav.poao.plugins.getMockOppfolgingsperioder
 
 fun Application.arbeidsoppfolgingRoutes() {
@@ -18,6 +19,11 @@ fun Application.arbeidsoppfolgingRoutes() {
                 val aktorId = call.request.queryParameters["aktorId"]
                 log.info("Hent aktiviteter for aktorId: {}", aktorId)
                 call.respond(getMockAktiviteter(fromMockFile = true))
+            }
+            get("info") {
+                val aktorId = call.request.queryParameters["aktorId"]
+                log.info("Hent oppfølgingsInfo for aktorId: {}", aktorId)
+                call.respond(getMockOppfolgingsinfo(fromMockFile = true))
             }
         }
     }
