# src/main/resources/openapi/ArbeidsoppfolgingV1.yaml
@@ -283,12 +283,25 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Melding'
+    Oppfolgingsinfo:
+      type: object
+      properties:
+        underOppfolging:
+          type: boolean
+          description: Definerer om brukeren er under arbeidsrettet oppfølging eller ikke
+          example: true
+        primaerVeileder:
+          type: string
+          description: NAV ident til brukerens veileder for oppfølgingen
+          example: Z999999
 paths:
   /v1/oppfolging/periode:
     get:
       operationId: hentOppfolgingsperioder
       tags:
         - Oppfolging
+        - Aktivitet
+        - Dialog
       description: ''
       parameters:
         - name: aktorId
@@ -311,7 +324,8 @@ paths:
     get:
       operationId: hentAktiviteter
       tags:
-        - Aktiviteter
+        - Aktivitet
+        - Dialog
       description: ''
       parameters:
         - name: aktorId
@@ -330,3 +344,23 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Aktivitet'
+  /v1/oppfolging/info:
+    get:
+      tags:
+        - Oppfolging
+      description: Returnerer grunnleggende informasjon om arbeidsrettet oppfølging for brukeren, og hvorvidt brukeren er under oppfølging
+      parameters:
+        - name: aktorId
+          in: query
+          required: true
+          schema:
+            type: string
+          description: AktørID til personen man ønsker å hente ut oppølgingsinfo for
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Oppfolgingsinfo'
+
